--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
   <div class="container">
     <header>
-      <div class="title">Principia Wealth | Proteção Patrimonial</div>
+      <div class="title">Proteção Patrimonial | Principia Wealth</div>
       <div class="subtitle">Segurança financeira familiar e preservação do legado patrimonial.</div>
       <div class="lead-summary">
         Muitas famílias percebem tarde demais que a ausência de planejamento pode consumir parte significativa do patrimônio em impostos e custos judiciais, ou forçar a venda de ativos em condições desfavoráveis. Este simulador revela exposições na sua estrutura financeira, permitindo proteger o padrão de vida dos seus dependentes e garantir a sucessão tranquila dos seus bens.
@@ -712,4 +712,5 @@
     toggleInputs();
   </script>
 </body>
+
 </html>
